apps/profile/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile
  namespace: casego-apps
  labels:
    app: profile
spec:
  selector:
    matchLabels:
      app: profile
  template:
    metadata:
      labels:
        app: profile
    spec:
      containers:
        - name: profile
          image: ghcr.io/sewaustav/casego-profile:main-1781351504-bed3ed1aeb27d9d4a5f5da524b63d597d8b603e3 # {"$imagepolicy": "flux-system:casego-profile"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
            - name: grpc
              containerPort: 50053
          resources:
            requests:
              cpu: 30m
              memory: 64Mi
            limits:
              memory: 256Mi
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: tls
              mountPath: /root/certs
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: profile-server-tls
        - name: migrations
          emptyDir: {}
