apps/profile/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profile
  namespace: casego-apps
spec:
  selector:
    app: profile
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: grpc
      port: 50053
      targetPort: grpc
